🔧 chore(.env): update DEFAULT_MODEL to gpt-4 and add OPENAI_API_KEY to improve chatbot functionality ✨ feat(Chat.tsx): update chatbot UI text to 'Singularity is Nearer' for a more engaging user experience 🔧 chore(home.tsx): update page title to 'gpt-4' and update meta description for better SEO optimization

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Chatbot UI
-DEFAULT_MODEL=gpt-3.5-turbo
+# DEFAULT_MODEL=gpt-3.5-turbo
+DEFAULT_MODEL=gpt-4
 NEXT_PUBLIC_DEFAULT_SYSTEM_PROMPT=You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
 
 # Google
 GOOGLE_API_KEY=YOUR_API_KEY
